--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,9 +3,9 @@
 Name Name:
   name        : "Timo Adam"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "ta59@st-andrews.ac.uk"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "Timo.jpg"
   twitter     : "name"
   google_plus : "Name"
 
