--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Timo.jpg"
   bio              : "Research Fellow in Statistics"
   location         : "St Andrews, UK"
-  employer         : "University of St Andrews, School of Mathematics and Statistics"
+  employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.de/citations?user=C8WuHG4AAAAJ&hl=de"
   email            :
