--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Timo Adam"
-  avatar           : "Timo.jpg"
+  avatar           : "Timo.png"
   bio              : "Research Fellow in Statistics"
   location         : "St Andrews, UK"
   employer         :
