--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,13 +3,13 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Talks and presentations"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Software"
     url: /portfolio/
     
   - title: "CV"
