--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Timo Adam"
   avatar           : "Timo.jpg"
-  bio              : "Research Fellow in Statistics\\ Univerity of St Andrews, UK"
+  bio              : "Research Fellow in Statistics\ University of St Andrews, UK"
   location         : "St Andrews, UK"
   employer         :
   pubmed           :
