--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Timo Adam"
+  name             : "Dr. Timo Adam"
   avatar           : "Timo.jpg"
   bio              : "Research Fellow in Statistics <br> University of St Andrews, <br> School of Mathematics and Statistics"
   location         : "St Andrews, UK"
