--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Timo Adam"
   avatar           : "Timo.jpg"
-  bio              : "Statistician, <br> Research fellow at the <br> University of St Andrews, <br> School of Mathematics and Statistics"
+  bio              : "Statistician, <br> Research fellow at the University of St Andrews, School of Mathematics and Statistics"
   location         : "St Andrews, UK"
   employer         :
   pubmed           :
