--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Timo Adam"
-  avatar           : "Timo.jpg"
-  bio              : "Statistician, <br> University of St Andrews, School of Mathematics and Statistics"
+  avatar           : "IMG_6402 2.jpg"
+  bio              : "University of St Andrews, School of Mathematics and Statistics"
   location         : "St Andrews, UK"
   employer         :
   pubmed           :
