--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   #- title: "Projects"
   #  url: /portfolio/
 
-  - title: "Research"
+  - title: "📉 Research"
     url: /research/
 
   - title: "Talks"
@@ -12,5 +12,5 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "CV"
+  - title: "🎓 CV"
     url: /cv/
