--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,10 +6,10 @@ main:
   - title: "📉 Research"
     url: /research/
 
-  - title: "Talks"
+  - title: "🎙️ Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "👨‍🏫 Teaching"
     url: /teaching/    
     
   - title: "🎓 CV"
