--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Dr. Timo Adam"
   avatar           : "IMG_6402 2.jpg"
   bio              : "University of St Andrews, School of Mathematics and Statistics"
-  location         : "St Andrews, UK"
+  location         : "🇬🇧 St Andrews"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.de/citations?user=C8WuHG4AAAAJ&hl=de"
