--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "🎙️ Talks"
     url: /talks/    
 
-  - title: "👨‍🏫 Teaching"
+  - title: "📚 Teaching"
     url: /teaching/    
     
-  - title: "🎓 CV"
+  - title: "📄 CV"
     url: /cv/
