--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Dr. Timo Adam"
   avatar           : "IMG_6402 2.jpg"
   bio              : "University of St Andrews, School of Mathematics and Statistics"
-  location         : "🇬🇧 St Andrews"
+  location         : "St Andrews, UK 🇬🇧"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.de/citations?user=C8WuHG4AAAAJ&hl=de"
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/timoadam/"
-  orcid            : 
+  orcid            : "https://orcid.org/0000-0001-9079-3259"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
